Mobile view fix for overflow

--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -1,4 +1,5 @@
 * {
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
@@ -58,7 +59,7 @@ body {
 }
 
 .appContent {
-    padding: 10px;
+    padding: 10px 0px 5px;
     font-size: 1em;
     width: 100%;
 }
@@ -71,7 +72,6 @@ div {
     background: var(--us-black);
     color: #fff;
     padding: 10px 10px;
-    ;
     font-size: 1em;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -168,7 +168,6 @@ div {
     padding: 15px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 .listHead {
